# tansa

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  LICENSE.txt  README.md  buf.work.yaml
.github/workflows/: verify.yaml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/network/: GetMulticastInterfaceIndexes.java  mod.rs
cli/src/server/: GetMulticastInterfaceIndexes.java  mod.rs
doc/: oneshot-scan.d2
main/: Cargo.toml
main/src/: id.rs  lib.rs  multicast.rs  os.rs  packet.rs  process.rs  response_collector.rs  response_sender.rs  scanner.rs  server.rs  stream.rs
main/src/network/: mod.rs  multicast.rs  udp_receiver.rs  udp_sender.rs
main/src/network/ip_neighbor/: Print-IpNeighbors.ps1  linux.rs  mod.rs  windows.rs
main/src/network/link_local/: mod.rs
protocol/grpc/: buf.yaml
protocol/grpc/tw/seamlik/tansa/v1/: discovery_packet.proto  multicast_packet.proto  request.proto  response.proto  response_collector_service.proto  socket_address.proto
protocol/rust/: Cargo.toml  build.rs
protocol/rust/src/: lib.rs  socket_address.rs
