[package]
name = "cli"
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
tansa = { path = "../main" }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread"] }
