[package]
edition.workspace = true
name = "tansa"
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
futures-util = "0.3"
log = "0.4"
mockall = "0.12"
prost = "0.12"
socket2 = "0.5"
tansa-protocol = { path = "../protocol/rust" }
tokio = "1"
tonic = "0.11"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
