[package]
edition.workspace = true
name = "tansa"
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
csv = "1"
futures-channel = "0.3"
futures-util = "0.3"
log = "0.4"
mockall = "0.12"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tansa-protocol = { path = "../protocol/rust" }
thiserror = "1"
tokio = { version = "1", features = ["fs", "process"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["codec", "net"]}
tonic = "0.11"
tonic-health = "0.11"
tower-layer = "0.3"

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["macros"] }
