[package]
edition.workspace = true
name = "tansa-protocol"
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
thiserror = "1"
tokio-util = { version = "0.7", features = ["codec"]}

[build-dependencies]
tonic-build = "0.11"
